--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
                 id="details-mail"
                 class="more-details col-full button button--pressed theme-change hidden"
             >
-                <p onclick="copyContent(this)">trananhhh@dfoah.com</p>
+                <p onclick="copyContent(this)">trananhprince@gmail.com</p>
                 <a
                     class="more-details-btn col button theme-change button--highlight"
-                    href="mailto:_trananhhh@dfoah.com"
+                    href="mailto:trananhprince@gmail.com"
                 >
                     Send
                 </a>
@@ -222,7 +222,7 @@
                     <i class="fab fa-github"></i>
                 </a>
                 <a
-                    href="https://github.com/alexxthunderr"
+                    href="https://www.linkedin.com/in/nguyen-tran-quoc-anh-188138204/"
                     id="portfolio-btn__linkedin"
                     class="social-btn button theme-change col-forth col"
                 >
