open in app link

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="social-btns-container row">
                 <a
                     id="social-btn__facebook"
-                    href="https://www.facebook.com/trananh.prince/"
+                    href="https://openinapp.co/trananhprince"
                     class="social-btn button theme-change col-forth col"
                 >
                     <!-- <img src="./src/icon/facebook.svg" alt="" /> -->
@@ -83,7 +83,7 @@
                 </a>
                 <a
                     id="social-btn__instagram"
-                    href="https://www.instagram.com/_trananhhh/"
+                    href="https://openinapp.co/trananhhh"
                     class="social-btn button theme-change col-forth col"
                 >
                     <!-- <img src="./src/icon/instagram.svg" alt="" /> -->
