--- a/index.html
+++ b/index.html
@@ -144,25 +144,25 @@
         </div>
     </div>
     <script>
-        function getOS() {
-            var userAgent = window.navigator.userAgent,
-                platform = window.navigator?.userAgentData?.platform || window.navigator.platform,
-                macosPlatforms = ['Macintosh', 'MacIntel', 'MacPPC', 'Mac68K'],
-                windowsPlatforms = ['Win32', 'Win64', 'Windows', 'WinCE'],
-                iosPlatforms = ['iPhone', 'iPad', 'iPod'],
-                os = null;
+        // function getOS() {
+        var userAgent = window.navigator.userAgent,
+            platform = window.navigator?.userAgentData?.platform || window.navigator.platform,
+            macosPlatforms = ['Macintosh', 'MacIntel', 'MacPPC', 'Mac68K'],
+            windowsPlatforms = ['Win32', 'Win64', 'Windows', 'WinCE'],
+            iosPlatforms = ['iPhone', 'iPad', 'iPod'],
+            os = null;
 
-            if (iosPlatforms.indexOf(platform) !== -1) {
-                document.getElementById("social-btn__facebook").href = "fb://profile/trananh.prince"
-                os = 'iOS';
-            } else if (/Android/.test(userAgent)) {
-                document.getElementById("social-btn__facebook").href = "https://openinapp.co/trananhprince"
-                os = 'Android';
-            }
-            return os;
+        if (iosPlatforms.indexOf(platform) !== -1) {
+            document.getElementById("social-btn__facebook").href = "fb://profile/trananh.prince"
+            os = 'iOS';
+        } else if (/Android/.test(userAgent)) {
+            document.getElementById("social-btn__facebook").href = "https://openinapp.co/trananhprince"
+            os = 'Android';
         }
+        //     return os;
+        // }
 
-        alert(getOS());
+        // getOS();
 
         var changeThemeList =
             document.getElementsByClassName('theme-change');
